# codebase-auditor

./: .env.example  .gitattributes  .gitignore  README.md  justfile
backend/: pyproject.toml  requirements.txt  server.py  storage.py
backend/core/: auth.py  logging_config.py  middleware.py
backend/routes/: audit.py
backend/services/: audit.py  persist.py
backend/storage/: repo.py
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/audit/: route.ts
frontend/app/api/github/file/: route.ts
frontend/app/api/github/tree/: route.ts
frontend/components/auditor/: AuditorShell.tsx  ChatInterface.tsx  RepoInput.tsx  ReportPanel.tsx
frontend/components/auth/: AuthButton.tsx
frontend/lib/: config.ts  github.ts
frontend/lib/actions/: auth.ts
frontend/lib/supabase/: server.ts
opentofu/: main.tf  terraform.tfvars  terraform.tfvars.example  terraform.tfvars.production  terraform.tfvars.staging  variables.tf
scripts/: deploy.sh
supabase/migrations/: 20260423000001_create_profiles.sql  20260423000002_create_audits.sql  20260506000001_improve_profiles_and_audits.sql
